src/test/ui/chalkify/chalk_initial_program.stderr
error[E0277]: the trait bound `f32: Foo` is not satisfied
  --> $DIR/chalk_initial_program.rs:15:13
   |
LL | fn gimme<F: Foo>() { }
   |             --- required by this bound in `gimme`
...
LL |     gimme::<f32>();
   |             ^^^ the trait `Foo` is not implemented for `f32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
